manifest/wordpressApp/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-app
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: wordpress-vol  # match volumes
            mountPath: /var/www/html
      volumes:
        - name: wordpress-vol # match volumeMounts
          persistentVolumeClaim:
            claimName: wordpress-pvc
            
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: dbNode
