manifest/wordpressApp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip
spec:
  type: ClusterIP
  selector:
    app: mysql-app
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport
spec:
  type: NodePort
  selector:
     app: wordpress-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-nodeport
                port:
                  number: 80
---
